--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/hypospray.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/hypospray.yml
@@ -55,10 +55,10 @@
   - type: Recyclable
 
 - type: entity
-  name: epinephrine medipen
+  name: emergency medipen
   parent: ChemicalMedipen
-  id: EpinephrineMedipen
-  description: A rapid and safe way to stabilize patients in critical condition for personnel without advanced medical knowledge. Beware, as it's easy to overdose on epinephrine.
+  id: EmergencyMedipen
+  description: A rapid and safe way to stabilize patients in critical condition for personnel without advanced medical knowledge. Beware, as it's easy to overdose on epinephrine and tranexmic acid.
   components:
   - type: SolutionContainerManager
     solutions:
@@ -66,13 +66,16 @@
         maxVol: 15
         reagents:
         - ReagentId: Epinephrine
-          Quantity: 15
+          Quantity: 12
+        - ReagentId: TranexamicAcid
+          Quantity: 3
+
 
 - type: entity
-  name: epinephrine medipen
+  name: anti-poison medipen
   parent: ChemicalMedipen
   id: AntiPoisonMedipen
-  description: A rapid dose of anti-poison. Contains ultravasculine, inaprovaline and epinephrine.
+  description: A rapid dose of anti-poison. Contains ultravasculine and epinephrine.
   components:
   - type: SolutionContainerManager
     solutions:
@@ -80,8 +83,6 @@
         maxVol: 15
         reagents:
         - ReagentId: Ultravasculine
-          Quantity: 5
-        - ReagentId: Inaprovaline
-          Quantity: 5
+          Quantity: 10
         - ReagentId: Epinephrine
           Quantity: 5
