--- a/Resources/Prototypes/Entities/Mobs/Species/human.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/human.yml
@@ -285,14 +285,15 @@
   - type: Butcherable
     butcheringType: Spike # TODO human.
     spawned: FoodMeat
-  - type: Recyclable
-    safe: false
+#  - type: Recyclable Turns out turning off recycler safeties without considering the instagib is a bad idea
+#    safe: false
   - type: Speech
   - type: Emoting
   - type: Grammar
     attributes:
       proper: true
   - type: StandingState
+
 - type: entity
   save: false
   name: Urist McHands
