Thermomachine fix + machine boards (#6803)

--- a/Resources/Prototypes/Entities/Structures/Piping/Atmospherics/unary.yml
+++ b/Resources/Prototypes/Entities/Structures/Piping/Atmospherics/unary.yml
@@ -148,6 +148,12 @@
     - type: GasThermoMachine
     - type: AtmosPipeColor
     - type: AtmosDevice
+    - type: Construction
+      graph: Machine
+      node: machine
+    - type: Wires
+      BoardName: "Thermomachine"
+      LayoutId: Thermomachine
     - type: NodeContainer
       nodes:
         pipe:
@@ -177,6 +183,8 @@
     - type: GasThermoMachine
       mode: Freezer
       minTemperature: 73.15
+    - type: Machine
+      board: ThermomachineFreezerMachineCircuitBoard
 
 - type: entity
   parent: BaseGasThermoMachine
@@ -200,3 +208,5 @@
     - type: GasThermoMachine
       mode: Heater
       maxTemperature: 573.15 # This is changed when parts are refreshed.
+    - type: Machine
+      board: ThermomachineHeaterMachineCircuitBoard
