--- a/Resources/Prototypes/Entities/Effects/puddle.yml
+++ b/Resources/Prototypes/Entities/Effects/puddle.yml
@@ -101,6 +101,7 @@
   - type: Puddle
     slipThreshold: 20
     overflowVolume: 50
+    opacityModifier: 8
   - type: Evaporation
     evaporateTime: 400 # very slow
   - type: Appearance
