Make recyclers great again (#6653)
Co-authored-by: metalgearsloth <metalgearsloth@gmail.com>

--- a/Resources/Prototypes/Entities/Objects/Consumable/Drinks/drinks.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Drinks/drinks.yml
@@ -2104,6 +2104,7 @@
     sprite: Objects/Consumable/Drinks/ramen.rsi
   - type: Tag
     tags:
+    - Recyclable
     - Trash
   - type: Recyclable
 
