--- a/Resources/Prototypes/Entities/Objects/Consumable/Drinks/drinks_cans.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Drinks/drinks_cans.yml
@@ -36,6 +36,7 @@
       stateOpen: icon_open
   - type: Tag
     tags:
+    - Recyclable
     - Trash
   - type: ItemCooldown
   - type: Recyclable
@@ -56,6 +57,7 @@
   - type: Tag
     tags:
     - Cola
+    - Recyclable
     - Trash
   - type: Sprite
     sprite: Objects/Consumable/Drinks/cola.rsi
