--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
@@ -195,6 +195,7 @@
         - SmallImpassable
   - type: Tag
     tags:
+    - Recyclable
     - Trash
   - type: SolutionContainerManager
     solutions:
