--- a/Resources/Prototypes/Entities/Objects/Consumable/Smokeables/Cigarettes/rolling_paper.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Smokeables/Cigarettes/rolling_paper.yml
@@ -57,6 +57,7 @@
     size: 2
   - type: Tag
     tags:
+    - Recyclable
     - RollingPaper
     - Trash
   - type: Recyclable
@@ -80,5 +81,6 @@
   - type: Tag
     tags:
     - CigFilter
+    - Recyclable
     - Trash
   - type: Recyclable
