--- a/Resources/Prototypes/Entities/Objects/Fun/crayons.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/crayons.yml
@@ -9,6 +9,7 @@
     tags:
     - Write
     - Crayon
+    - Recyclable
     - Trash
   - type: Recyclable
   - type: UserInterface
@@ -38,6 +39,7 @@
     - Write
     - Crayon
     - CrayonWhite
+    - Recyclable
     - Trash
 
 - type: entity
@@ -60,6 +62,7 @@
     - Write
     - Crayon
     - CrayonWhite
+    - Recyclable
     - Trash
 
 - type: entity
@@ -82,6 +85,7 @@
     - Write
     - Crayon
     - CrayonBlack
+    - Recyclable
     - Trash
 
 - type: entity
@@ -104,6 +108,7 @@
     - Write
     - Crayon
     - CrayonRed
+    - Recyclable
     - Trash
 
 - type: entity
@@ -126,6 +131,7 @@
     - Write
     - Crayon
     - CrayonOrange
+    - Recyclable
     - Trash
 
 - type: entity
@@ -148,6 +154,7 @@
     - Write
     - Crayon
     - CrayonYellow
+    - Recyclable
     - Trash
 
 - type: entity
@@ -170,6 +177,7 @@
     - Write
     - Crayon
     - CrayonGreen
+    - Recyclable
     - Trash
 
 - type: entity
@@ -192,6 +200,7 @@
     - Write
     - Crayon
     - CrayonBlue
+    - Recyclable
     - Trash
 
 - type: entity
@@ -214,6 +223,7 @@
     - Write
     - Crayon
     - CrayonPurple
+    - Recyclable
     - Trash
 
 - type: entity
