--- a/Resources/Prototypes/Entities/Objects/Tools/matches.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/matches.yml
@@ -17,6 +17,7 @@
   - type: Tag
     tags:
     - Matchstick
+    - Recyclable
     - Trash
   - type: Recyclable
   - type: Sprite
@@ -80,5 +81,6 @@
           - matchbox3
   - type: Tag
     tags:
+    - Recyclable
     - Trash
   - type: Recyclable
