Centcom Special Operations Officer clothes (#108)
* Add centcom black uniform by haZZLO

* Smaller hat icon

* Update descriptions

* Update names

* Add locale files

--- a/Resources/Prototypes/Entities/Clothing/Head/hats.yml
+++ b/Resources/Prototypes/Entities/Clothing/Head/hats.yml
@@ -406,3 +406,14 @@
     sprite: Clothing/Head/Hats/pyjamasyndicatered.rsi
   - type: Clothing
     sprite: Clothing/Head/Hats/pyjamasyndicatered.rsi
+
+- type: entity
+  parent: ClothingHeadBase
+  id: ClothingHeadCapCentcomBlack
+  name: black special operations officer cap
+  description: The NanoTrasen gold-engraved special cap of the higher ranks, which has long gone through more than one blitzkrieg...
+  components:
+    - type: Sprite
+      sprite: Clothing/Head/Hats/centcom_officer_black.rsi
+    - type: Clothing
+      sprite: Clothing/Head/Hats/centcom_officer_black.rsi
