Fix two interaction obstruction checks (#6793)

--- a/Resources/Prototypes/Entities/Structures/Wallmounts/fire_alarm.yml
+++ b/Resources/Prototypes/Entities/Structures/Wallmounts/fire_alarm.yml
@@ -61,6 +61,7 @@
   name: fire alarm assembly
   description: A fire alarm assembly. Very mild.
   components:
+  - type: WallMount
   - type: Clickable
   - type: InteractionOutline
   - type: Sprite
