Add buildable plastic flaps (#6583)
Co-authored-by: fishfish458 <fishfish458>

--- a/Resources/Prototypes/Entities/Structures/Furniture/Tables/tables.yml
+++ b/Resources/Prototypes/Entities/Structures/Furniture/Tables/tables.yml
@@ -17,7 +17,7 @@
       mass: 50
       mask:
       - Impassable
-      - VaultImpassable
+      - SmallImpassable
   - type: Damageable
     damageContainer: Inorganic
     damageModifierSet: Metallic
