--- a/Resources/Prototypes/Entities/Structures/Piping/Atmospherics/unary.yml
+++ b/Resources/Prototypes/Entities/Structures/Piping/Atmospherics/unary.yml
@@ -148,6 +148,13 @@
     - type: GasThermoMachine
     - type: AtmosPipeColor
     - type: AtmosDevice
+    - type: UserInterface
+      interfaces:
+      - key: enum.ThermomachineUiKey.Key
+        type: GasThermomachineBoundUserInterface
+    - type: ActivatableUI
+      inHandsOnly: false
+      key: enum.ThermomachineUiKey.Key
     - type: Construction
       graph: Machine
       node: machine
