add airtight flaps for mapping (#6875)
Co-authored-by: fishfish458 <fishfish458>

--- a/Resources/Prototypes/Entities/Structures/plastic_flaps.yml
+++ b/Resources/Prototypes/Entities/Structures/plastic_flaps.yml
@@ -64,3 +64,39 @@
   - type: Occluder
     sizeX: 32
     sizeY: 32
+
+- type: entity
+  id: PlasticFlapsAirtightClear
+  parent: PlasticFlapsClear
+  name: airtight plastic flaps
+  suffix: Airtight Clear
+  description: Heavy duty, slightly stronger, airtight plastic flaps. Definitely can't get past those. No way.
+  components:
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 150
+      behaviors:
+      - !type:DoActsBehavior
+        acts: ["Destruction"]
+  - type: Airtight
+    fixVacuum: true
+
+- type: entity
+  id: PlasticFlapsAirtightOpaque
+  parent: PlasticFlapsOpaque
+  name: airtight plastic flaps
+  suffix: Airtight Opaque
+  description: Heavy duty, slightly stronger, airtight plastic flaps. Definitely can't get past those. No way.
+  components:
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 150
+      behaviors:
+      - !type:DoActsBehavior
+        acts: ["Destruction"]
+  - type: Airtight
+    fixVacuum: true
