--- a/Resources/Prototypes/Entities/Structures/Doors/MaterialDoors/material_doors.yml
+++ b/Resources/Prototypes/Entities/Structures/Doors/MaterialDoors/material_doors.yml
@@ -5,6 +5,7 @@
   abstract: true
   description: A door, where will it lead?
   components:
+  - type: InteractionOutline
   - type: Sprite
     netsync: false
     sprite: Structures/Doors/MineralDoors/metal_door.rsi
