--- a/Resources/Prototypes/Entities/Objects/Devices/nuke.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/nuke.yml
@@ -31,6 +31,8 @@
           tags:
           - NukeDisk
     - type: InteractionOutline
+    - type: ActivatableUI
+      key: enum.NukeUiKey.Key
     - type: UserInterface
       interfaces:
         - key: enum.NukeUiKey.Key
