Change material doors to not crush people (#6850)

--- a/Resources/Prototypes/Entities/Structures/Doors/MaterialDoors/material_doors.yml
+++ b/Resources/Prototypes/Entities/Structures/Doors/MaterialDoors/material_doors.yml
@@ -31,6 +31,7 @@
     bumpOpen: false
     clickOpen: true
     weldable: false
+    canCrush: false
     closeTimeOne: 0.2
     closeTimeTwo: 0.6
     openTimeOne: 0.6
