--- a/Resources/Prototypes/Catalog/Fills/Lockers/misc.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/misc.yml
@@ -38,6 +38,8 @@
           prob: 0.75
         - id: ClothingMaskGas
           prob: 0.75
+        - id: ClothingHeadHelmetFire
+          prob: 0.75
 
 - type: entity
   id: ClosetMaintenanceFilledRandom
