--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/atmosdrobe.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/atmosdrobe.yml
@@ -10,3 +10,5 @@
     ClothingUniformJumpskirtEngineering: 3
     ClothingShoesColorBlack: 3
     ClothingHeadsetEngineering: 2
+    ClothingOuterSuitFire: 2
+    ClothingHeadHelmetFire: 2
