--- a/Resources/Prototypes/Entities/Clothing/Head/helmets.yml
+++ b/Resources/Prototypes/Entities/Clothing/Head/helmets.yml
@@ -157,3 +157,20 @@
   - type: Clothing
     sprite: Clothing/Head/Helmets/wizardhelm.rsi
   - type: IngestionBlocker
+  
+- type: entity
+  parent: ClothingHeadHardsuitWithLightBase # hardsuitlight base for light and protection
+  id: ClothingHeadHelmetFire
+  name: fire helmet
+  description: An atmos techs best friend. Provides some heat resistance and looks cool.
+  components:
+  - type: Sprite
+    sprite: Clothing/Head/Helmets/firehelmet.rsi
+  - type: Clothing
+    sprite: Clothing/Head/Helmets/firehelmet.rsi
+  - type: IngestionBlocker
+  - type: PowerCellSlot
+    cellSlot:
+      startingItem: PowerCellSmallHigh
+  - type: TemperatureProtection
+    coefficient: 0.01
