--- a/Resources/Prototypes/Entities/Objects/Devices/Electronics/door.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/Electronics/door.yml
@@ -2,6 +2,7 @@
   id: DoorElectronics
   parent: BaseItem
   name: door electronics
+  description: An electronics board used in doors and airlocks
   components:
     - type: Tag
       tags:
