--- a/Resources/Prototypes/Entities/Objects/Devices/Electronics/firelock.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/Electronics/firelock.yml
@@ -2,7 +2,7 @@
   id: FirelockElectronics
   parent: BaseItem
   name: firelock electronics
-  description: Advanced circuit board used to detect differences in pressure, temperature and gas concentrations between the two sides of the door.
+  description: An electronics board used to detect differences in pressure, temperature and gas concentrations between the two sides of the door.
   components:
     - type: Tag
       tags:
