--- a/Resources/Prototypes/Entities/Objects/Devices/Electronics/apc.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/Electronics/apc.yml
@@ -2,7 +2,7 @@
   id: APCElectronics
   parent: BaseItem
   name: APC electronics
-  description: Circuit used in APC construction.
+  description: An electronics board used in APC construction.
   components:
     - type: Sprite
       sprite: Objects/Misc/module.rsi
