--- a/Resources/Prototypes/Entities/Objects/Devices/Electronics/solar.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/Electronics/solar.yml
@@ -2,7 +2,7 @@
   parent: BaseItem
   id: SolarTrackerElectronics
   name: solar tracker electronics
-  description: Advanced circuit board used to detect differences in pressure, temperature and gas concentrations between the two sides of the door.
+  description: An electronics board used in solar tracker devices
   components:
     - type: Sprite
       sprite: Objects/Misc/module.rsi
