--- a/Resources/Prototypes/Entities/Structures/Machines/Computers/computers.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/Computers/computers.yml
@@ -9,6 +9,8 @@
     - type: ComputerVisualizer
       key: atmos_key
       screen: "alert-2"
+  - type: Computer
+    board: AlertsComputerCircuitboard
 
 - type: entity
   parent: ComputerBase
@@ -71,6 +73,8 @@
     radius: 1.5
     energy: 1.6
     color: "#c9c042"
+  - type: Computer
+    board: PowerComputerCircuitboard
 
 - type: entity
   parent: ComputerBase
@@ -87,6 +91,26 @@
     radius: 1.5
     energy: 1.6
     color: "#1f8c28"
+  - type: Computer
+    board: MedicalRecordsComputerCircuitboard
+    
+- type: entity
+  parent: ComputerBase
+  id: ComputerCriminalRecords
+  name: criminal records computer
+  description: This can be used to check criminal records.
+  components:
+  - type: Appearance
+    visuals:
+    - type: ComputerVisualizer
+      key: security_key
+      screen: security
+  - type: PointLight
+    radius: 1.5
+    energy: 1.6
+    color: "#1f8c28"
+  - type: Computer
+    board: CriminalRecordsComputerCircuitboard
 
 - type: entity
   parent: ComputerBase
