Adds boxes of all magazine types + box of trashbags and flares (#6891)

--- a/Resources/Prototypes/Catalog/Fills/Boxes/general.yml
+++ b/Resources/Prototypes/Catalog/Fills/Boxes/general.yml
@@ -177,3 +177,38 @@
     layers:
       - state: box
       - state: writing
+      
+- type: entity
+  name: flare box
+  parent: BoxCardboard
+  id: BoxFlare
+  description: A box of flares. Party time.
+  components:
+  - type: StorageFill
+    contents:
+      - id: Flare
+        amount: 6
+  - type: Sprite
+    layers:
+      - state: box
+      - state: writing
+      
+- type: entity
+  name: trashbag box
+  parent: BoxCardboard
+  id: BoxTrashbag
+  description: A box of trashbags. Happy janitor noises.
+  components:
+  - type: StorageFill
+    contents:
+      - id: TrashBag
+        amount: 6
+  - type: Storage
+    capacity: 800
+    whitelist:
+      tags:
+        - TrashBag
+  - type: Sprite
+    layers:
+      - state: box
+      - state: writing
